<resources>
    <string name="app_name">GwalaDairy</string>
    <string name="title_activity_dashboard">Gwala Dairy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gwala Dairy</string>
    <string name="nav_header_subtitle">user@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="promomessage">Promotional Message</string>

    <string name="about_text1">Your feedback is greatly appreciated. Problems,</string>
    <string name="about_text2">suggestions, general queries please let us</string>
    <string name="about_text3">know.</string>
    <string name="app_Version">App version 1.0</string>
    <string name="about_rate_us_in_google_play">Rate us in Google Play</string>
    <string name="about_share">Share the app</string>
    <string name="about_developer">Application designed and developed for commercial use.</string>

    <string name="helpline_number">+91–8969218143</string>
    <string name="helpline_office">Shivpuri \nGali No. 2 \nModinagar \nGhaziabad - 201204.</string>
    <string name="chat_support">Chat now with support executive.</string>

    <!--Spinner Code from here for putting Values-->
    <string-array name="product_quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>
